deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 4
  template:
    metadata:
      labels:
        name: hello-world
    spec:
      containers:
        - image: asia.gcr.io/kubernetes-231406/wdpress/hello-world
          imagePullPolicy: Always
          name: hello-world
