pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
    - image: asia.gcr.io/kubernetes-231406/wdpress/hello-world
      imagePullPolicy: Always
      name: hello-world
